--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
     <h2>Meus Projetos</h2>
     <div class="galeria-projetos">
 
-        <div class="card-projeto">
-            <img src="imagens/preview-relogio-gotico.png" alt="Preview do projeto A Torre da Tempestade">
-            <div class="card-conteudo">
-                <h3>A Torre da Tempestade</h3>
-                <p class="projeto-descricao">Um relógio gótico totalmente funcional que cria uma atmosfera imersiva com animações em CSS e JavaScript. A cena reage à passagem do tempo, com o fundo do castelo mudando para refletir o ciclo de dia e noite. Use os controles para viajar pelas horas e ver o cenário se transformar.</p>
-                <div class="projeto-links">
-                    <a href="#" class="link-demo" target="_blank">Ver ao Vivo</a>
-                    <a href="#" class="link-codigo" target="_blank">Ver o Código</a>
-                </div>
-            </div>
+       <div class="card-projeto">
+    <img src="imagens/preview-relogio-gotico.png" alt="Preview do projeto A Torre da Tempestade">
+    <div class="card-conteudo">
+        <h3>A Torre da Tempestade</h3>
+        <p class="projeto-descricao">
+            Um relógio gótico totalmente funcional que cria uma atmosfera imersiva com animações em CSS e JavaScript. A cena reage à passagem do tempo, com o fundo do castelo mudando para refletir o ciclo de dia e noite. Use os controles para viajar pelas horas e ver o cenário se transformar.
+        </p>
+        <div class="projeto-links">
+            <a href="https://t-h-i-a-g-o-a-r-a-u-j-o.github.io/relogio-gotico/" class="link-demo" target="_blank">Ver ao Vivo</a>
+            <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/relogio-gotico" class="link-codigo" target="_blank">Ver o Código</a>
         </div>
+    </div>
+</div>
 
         <div class="card-projeto">
             <img src="imagens/preview-leitor-zen.png" alt="Preview do projeto Leitor Zen">
