--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
     </div>
 </div>
 
-        <div class="card-projeto">
-            <img src="imagens/preview-leitor-zen.png" alt="Preview do projeto Leitor Zen">
-            <div class="card-conteudo">
-                <h3>Leitor Zen</h3>
-                <p class="projeto-descricao">Uma interface de leitura adaptativa que coloca o conforto do usuário em primeiro lugar. O projeto utiliza JavaScript para controlar a troca de temas, ajustar a acessibilidade da fonte e salvar as configurações do usuário no localStorage, demonstrando um forte foco em UX/UI.</p>
-                <div class="projeto-links">
-                    <a href="#" class="link-demo" target="_blank">Ver ao Vivo</a>
-                    <a href="#" class="link-codigo" target="_blank">Ver o Código</a>
-                </div>
-            </div>
+       <div class="card-projeto">
+    <img src="imagens/preview-leitor-zen.png" alt="Preview do projeto Leitor Zen">
+    <div class="card-conteudo">
+        <h3>Leitor Zen</h3>
+        <p class="projeto-descricao">
+            Uma interface de leitura adaptativa que coloca o conforto do usuário em primeiro lugar. O projeto utiliza JavaScript para controlar a troca de temas, ajustar a acessibilidade da fonte e salvar as configurações do usuário no `localStorage`, demonstrando um forte foco em UX/UI.
+        </p>
+        <div class="projeto-links">
+            <a href="https://t-h-i-a-g-o-a-r-a-u-j-o.github.io/leitor-zen/" class="link-demo" target="_blank">Ver ao Vivo</a>
+            <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/leitor-zen" class="link-codigo" target="_blank">Ver o Código</a>
         </div>
+    </div>
+</div>
 
         <div class="card-projeto">
             <img src="imagens/preview-lista-tarefas.png" alt="Preview do projeto Lista de Tarefas">
