--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
 </div>
 
         <div class="card-projeto">
-            <img src="imagens/preview-lista-tarefas.png" alt="Preview do projeto Lista de Tarefas">
-            <div class="card-conteudo">
-                <h3>Lista de Tarefas (CRUD App)</h3>
-                <p class="projeto-descricao">Uma aplicação web funcional que implementa todas as operações de um sistema CRUD (Criar, Ler, Atualizar, Deletar). Construída com JavaScript puro para manipulação do DOM, a lista de tarefas também utiliza o localStorage para garantir a persistência dos dados do usuário.</p>
-                <div class="projeto-links">
-                    <a href="#" class="link-demo" target="_blank">Ver ao Vivo</a>
-                    <a href="#" class="link-codigo" target="_blank">Ver o Código</a>
-                </div>
-            </div>
+    <img src="imagens/preview-lista-tarefas.png" alt="Preview do projeto Lista de Tarefas">
+    <div class="card-conteudo">
+        <h3>Lista de Tarefas (CRUD App)</h3>
+        <p class="projeto-descricao">
+            Uma aplicação web funcional que implementa todas as operações de um sistema CRUD (Criar, Ler, Atualizar, Deletar). Construída com JavaScript puro para manipulação do DOM, a lista de tarefas também utiliza o `localStorage` para garantir a persistência dos dados do usuário.
+        </p>
+        <div class="projeto-links">
+            <a href="https://t-h-i-a-g-o-a-r-a-u-j-o.github.io/lista-de-tarefas/" class="link-demo" target="_blank">Ver ao Vivo</a>
+            <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/lista-de-tarefas" class="link-codigo" target="_blank">Ver o Código</a>
         </div>
-
+    </div>
+</div>
         <div class="card-projeto">
             <img src="imagens/preview-parallax.png" alt="Preview do projeto Parallax Galaxia">
             <div class="card-conteudo">
