--- a/index.html
+++ b/index.html
@@ -72,17 +72,19 @@
         </div>
     </div>
 </div>
-        <div class="card-projeto">
-            <img src="imagens/preview-parallax.png" alt="Preview do projeto Parallax Galaxia">
-            <div class="card-conteudo">
-                <h3>Parallax Galaxia</h3>
-                <p class="projeto-descricao">Uma demonstração técnica e imersiva do efeito parallax, construída com JavaScript puro e CSS. Ao monitorar o evento de rolagem da página, o script ajusta a posição de cada camada em tempo real, criando uma rica ilusão de profundidade 3D e uma navegação visualmente dinâmica.</p>
-                <div class="projeto-links">
-                    <a href="#" class="link-demo" target="_blank">Ver ao Vivo</a>
-                    <a href="#" class="link-codigo" target="_blank">Ver o Código</a>
-                </div>
-            </div>
+       <div class="card-projeto">
+    <img src="imagens/preview-parallax.png" alt="Preview do projeto Parallax Galaxia">
+    <div class="card-conteudo">
+        <h3>Parallax Galaxia</h3>
+        <p class="projeto-descricao">
+            Uma demonstração técnica do efeito parallax construída com JavaScript puro e CSS, criando uma rica ilusão de profundidade 3D e uma navegação visualmente dinâmica.
+        </p>
+        <div class="projeto-links">
+            <a href="https://t-h-i-a-g-o-a-r-a-u-j-o.github.io/parallax-galaxia/" class="link-demo" target="_blank">Ver ao Vivo</a>
+            <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/parallax-galaxia" class="link-codigo" target="_blank">Ver o Código</a>
         </div>
+    </div>
+</div>
 
         <div class="card-projeto">
             <img src="imagens/preview-site-espacial.png" alt="Preview do projeto Explorando o Espaço">
