--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
 </div>
 
         <div class="card-projeto">
-            <img src="imagens/preview-site-espacial.png" alt="Preview do projeto Explorando o Espaço">
-            <div class="card-conteudo">
-                <h3>Explorando o Espaço</h3>
-                <p class="projeto-descricao">Um site responsivo multi-página que demonstra habilidades fundamentais de front-end. Construído com HTML e CSS para uma estrutura sólida e adaptável, o projeto também utiliza JavaScript para criar uma galeria de imagens interativa, focando em uma experiência de usuário limpa e funcional.</p>
-                <div class="projeto-links">
-                    <a href="#" class="link-demo" target="_blank">Ver ao Vivo</a>
-                    <a href="#" class="link-codigo" target="_blank">Ver o Código</a>
-                </div>
-            </div>
+    <img src="imagens/preview-site-espacial.png" alt="Preview do projeto Explorando o Espaço">
+    <div class="card-conteudo">
+        <h3>Explorando o Espaço</h3>
+        <p class="projeto-descricao">
+            Um site responsivo multi-página que demonstra habilidades fundamentais de front-end. Construído com HTML e CSS para uma estrutura sólida e adaptável, o projeto também utiliza JavaScript para criar uma galeria de imagens interativa.
+        </p>
+        <div class="projeto-links">
+            <a href="https://t-h-i-a-g-o-a-r-a-u-j-o.github.io/explorando-espaco/" class="link-demo" target="_blank">Ver ao Vivo</a>
+            <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/explorando-espaco" class="link-codigo" target="_blank">Ver o Código</a>
         </div>
+    </div>
+</div>
 
     </div>
 </section>
