--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <p>Vamos conversar! Você pode me encontrar nas seguintes plataformas:</p>
     <div class="links-contato">
 
-        <a href="#" class="link-social" id="link-github" target="_blank">
+        <a href="https://github.com/t-h-i-a-g-o-a-r-a-u-j-o/Thiago-Araujo" class="link-social" id="link-github" target="_blank">
             <i class="fab fa-github"></i>
             <span>GitHub</span>
         </a>
