--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <span>GitHub</span>
         </a>
 
-        <a href="#" class="link-social" id="link-linkedin" target="_blank">
+        <a href="www.linkedin.com/in/thiagoaoliveirahtml" class="link-social" id="link-linkedin" target="_blank">
             <i class="fab fa-linkedin"></i>
             <span>LinkedIn</span>
         </a>
